bk_ida/gobmkida/c3/owl_add_move
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_add_move/src/engine/owl.c:3800:18: error: expected expression
v14 = *( _OWORD *)&v12->pos; 
                 ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_add_move/src/engine/owl.c:3800:10: error: use of undeclared identifier '_OWORD'
v14 = *( _OWORD *)&v12->pos; 
         ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_add_move/src/engine/owl.c:3801:12: error: expected expression
*( _OWORD *)&moves[v13].same_dragon = *( _OWORD *)&v12->same_dragon; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_add_move/src/engine/owl.c:3801:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&moves[v13].same_dragon = *( _OWORD *)&v12->same_dragon; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_add_move/src/engine/owl.c:3801:50: error: expected expression
*( _OWORD *)&moves[v13].same_dragon = *( _OWORD *)&v12->same_dragon; 
                                                 ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_add_move/src/engine/owl.c:3801:42: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&moves[v13].same_dragon = *( _OWORD *)&v12->same_dragon; 
                                         ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_add_move/src/engine/owl.c:3802:12: error: expected expression
*( _OWORD *)&moves[v13].pos = v14; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_add_move/src/engine/owl.c:3802:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&moves[v13].pos = v14; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_add_move/src/engine/owl.c:3813:18: error: expected expression
v19 = *( _OWORD *)&v17->pos; 
                 ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_add_move/src/engine/owl.c:3813:10: error: use of undeclared identifier '_OWORD'
v19 = *( _OWORD *)&v17->pos; 
         ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_add_move/src/engine/owl.c:3814:12: error: expected expression
*( _OWORD *)&moves[v18].same_dragon = *( _OWORD *)&v17->same_dragon; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_add_move/src/engine/owl.c:3814:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&moves[v18].same_dragon = *( _OWORD *)&v17->same_dragon; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_add_move/src/engine/owl.c:3814:50: error: expected expression
*( _OWORD *)&moves[v18].same_dragon = *( _OWORD *)&v17->same_dragon; 
                                                 ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_add_move/src/engine/owl.c:3814:42: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&moves[v18].same_dragon = *( _OWORD *)&v17->same_dragon; 
                                         ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_add_move/src/engine/owl.c:3815:12: error: expected expression
*( _OWORD *)&moves[v18].pos = v19; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_add_move/src/engine/owl.c:3815:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&moves[v18].pos = v19; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_add_move/src/engine/owl.c:3832:18: error: expected expression
v23 = *( _OWORD *)&v21->pos; 
                 ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_add_move/src/engine/owl.c:3832:10: error: use of undeclared identifier '_OWORD'
v23 = *( _OWORD *)&v21->pos; 
         ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_add_move/src/engine/owl.c:3833:12: error: expected expression
*( _OWORD *)&moves[v22].same_dragon = *( _OWORD *)&v21->same_dragon; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_add_move/src/engine/owl.c:3833:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&moves[v22].same_dragon = *( _OWORD *)&v21->same_dragon; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_add_move/src/engine/owl.c:3833:50: error: expected expression
*( _OWORD *)&moves[v22].same_dragon = *( _OWORD *)&v21->same_dragon; 
                                                 ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_add_move/src/engine/owl.c:3833:42: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&moves[v22].same_dragon = *( _OWORD *)&v21->same_dragon; 
                                         ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_add_move/src/engine/owl.c:3834:12: error: expected expression
*( _OWORD *)&moves[v22].pos = v23; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_add_move/src/engine/owl.c:3834:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&moves[v22].pos = v23; 
   ^
24 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_add_move/src/obj/1/owl.o] Error 1
